--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,10 +20,15 @@
 		"**/.git": true,
 		".vscode": true,
 		".bundle": true,
-    ".*": true,
-    "*.ru": true,
+    ".gitignore": true,
+    ".gitpod.yml": true,
+    ".rspec": true,
+    ".devcontainer/": true,
+    "config.ru": true,
     "Dockerfile": true,
-    "Gem*": true,
+    "Gemfile": true,
+    "Gemfile.lock": true,
+    "tmp/": true,
     "install-packages": true,
     "main.rb": true,
     "README.md": true,
