--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,7 +25,7 @@
     ".rspec": true,
     ".devcontainer/": true,
     "config.ru": true,
-    "Dockerfile": true,
+    "Dockerfile": false,
     "Gemfile": true,
     "Gemfile.lock": true,
     "tmp/": true,
