--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,9 +17,9 @@
   "workbench.tree.renderIndentGuides": "always",
   "files.autoSaveDelay": 500,
   "files.exclude": {
-		"**/.git": true,
-		".vscode": true,
-		".bundle": true,
+    "**/.git": true,
+    ".vscode": true,
+    ".bundle": true,
     ".gitignore": true,
     ".gitpod.yml": true,
     ".rspec": true,
@@ -57,5 +57,16 @@
   "redhat.telemetry.enabled": false,
   "emmet.includeLanguages": {
     "erb": "html"
+  },
+  "[ruby]": {
+    "editor.defaultFormatter": "mbessey.vscode-rufo",
+    "editor.formatOnSave": true
+  },
+  "[erb]": {
+    "editor.defaultFormatter": "aliariff.vscode-erb-beautify",
+    "editor.formatOnSave": true
+  },
+  "files.associations": {
+    "*.html.erb": "erb"
   }
 }
