--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,6 @@
   "editor.linkedEditing": true,
   "editor.minimap.enabled": false,
   "editor.smoothScrolling": false,
-  "editor.wordBasedSuggestionsMode": "allDocuments",
   "editor.wordWrap": "on",
   "editor.wrappingIndent": "deepIndent",
   "workbench.editor.closeOnFileDelete": true,
@@ -41,21 +40,24 @@
   },
   "files.insertFinalNewline": true,
   "files.trimFinalNewlines": true,
-  "screencastMode.onlyKeyboardShortcuts": true,
+  "screencastMode.keyboardOptions": {
+    "showKeys": false,
+    "showKeybindings": true,
+    "showCommands": false,
+    "showCommandGroups": false,
+    "showSingleEditorCursorMoves": true
+  },
   "screencastMode.verticalOffset": 10,
   "explorer.compactFolders": false,
   "explorer.incrementalNaming": "smart",
-  "html.format.endWithNewline": true,
   "html.format.preserveNewLines": true,
   "html.format.templating": true,
   "terminal.integrated.altClickMovesCursor": true,
   "terminal.integrated.defaultProfile.linux": "bash",
   "vscode-erb-beautify.keepBlankLines": 1,
-  "ruby.intellisense": false,
   "gitpod.openInStable.neverPrompt": true,
   "gitlens.showWelcomeOnInstall": false,
   "gitlens.currentLine.enabled": false,
-  "redhat.telemetry.enabled": false,
   "emmet.includeLanguages": {
     "erb": "html"
   },
